# SWRast

./: CMakeLists.txt  README.md
App/: CMakeLists.txt  main.cpp
CMake/: RasterLib.cmake
Private/: Allocator.hpp  Context.cpp  HardwareShader.cpp  HardwareShader.hpp  InputAssembly.cpp  InputAssembly.hpp  Math.hpp  Memory.hpp  Rasterizer.cpp  Rasterizer.hpp
Public/SoftwareRaster/: Context.hpp  Core.hpp  Math.hpp  Math.inl  Shader.hpp
